--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
   - openjdk11
 install:
   - chmod +x ./gradlew
-  - ./gradlew build :lib:publishToMavenLocal
+  - ./gradlew build :customtoast:publishToMavenLocal
